# UnikeyTSF

./: .geminiignore  .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  build_all.bat  build_log.txt  build_output.txt  build_output_2.txt  build_output_3.txt  build_output_4.txt  compile_flags.txt  pm.cmd  pm.ps1
.agent/: instructions.md
.agent/benchmarks/: guardrail-hits.md  spawn-agent-benchmark.md
.agent/guidelines/: investor-metrics.md
.agent/indexes/: AGENTS-LITE-dev.md  AGENTS-LITE-pm.md  AGENTS-LITE-qc.md  AGENTS-LITE.md
.agent/roles/: @ba.md  @biz.md  @designer.md  @dev-be.md  @dev-fe.md  @dev.md  @devops.md  @pm-extended.md  @pm.md  @qc.md  @sa.md  @user-tester.md  @whitehat-hacker.md
.agent/rules/: MANIFEST.md  agile-user-stories.md  anti-patterns-core.md  anti-patterns-swarm.md  api-contract-first.md  autonomous-tooling.md  code-standards.md  context-budget.md  decision-routing.md  error-handling-standards.md  execution-protocol.md  git-hygiene.md  model-routing.md  no-code-boundary.md  performance-budget.md  scalable-folder-structure.md  security-standards.md  spawn-governance.md  ui-design-system.md  user-feedback-format.md
.agent/scripts/: check.ps1  cleanup-state.ps1  minify-framework.js  pm.ps1  pm.sh  spawn-agent.ps1
.agent/skills/: MANIFEST.md  accessibility-empathy.md  amateur-proof-plans.md  animation-choreography.md  architecture-decision-records.md  backlog-grooming.md  browser-visual-testing.md  c4-architecture.md  cicd-pipeline.md  cli-worker-lifecycle.md  competitive-landscape.md  conflict-resolver.md  context7-integration.md  critical-thinking-models.md  design-token-pipeline.md  documentation-style-guide.md  domain-driven-design.md  event-sourcing-cqrs.md  facilitation.md  financial-modeling.md  investor-pitch-writer.md  market-sizing.md  mobile-ux-patterns.md  model-selector.md  monetization-strategy.md  mutation-testing.md  partnership-development.md  performance-testing.md  playwright-testing.md  react-patterns.md  regression-strategy.md  requirement-enrichment.md  research-analysis.md  roadmap-architect.md  sequential-thinking.md  social-engineering-testing.md  structured-analysis-frameworks.md  systematic-debugging.md  task-router.md  technical-writing.md  (+5 more)
.agent/spawn_agent_tasks/: agents-report.txt  ba_out.txt  dark-mode.md  decompose-main.md  dev_out.txt  e2e-tests.md  perf-track-agents.md  perf-track-rules.md  perf-track-skills.md  perf-track-workflows.md  phase-3-vietnamese-typing-engine.md  phase2-1-spellcheck.md  qc_out.txt  round2_ba.md  round2_dev.md  round2_qc.md  rules-report.txt  skills-report.txt  temp_log.txt  test_ba.md  test_dev.md  test_qc.md  unikey-improvements.md  workflows-report.txt
.agent/workflows/: MANIFEST.md  battle-test.md  close-phase.md  delegate-task.md  design-to-code.md  framework-lint.md  handoff.md  hc-sdlc.md  idea-forge.md  idea-to-prd.md  party-mode.md  pentest-session.md  research-swarm.md  retrospective.md  scaffold-feature.md  spawn-base-template.md  swarm-execute.md  token-check.md  user-test-session.md
.github/workflows/: ci.yml
.hc/: README.md
.hc/debug/: 2026-03-19-agent-framework-post-perf-report.md
.hc/research/: 2026-03-18-unikey-improvements-cross-review.md  2026-03-18-unikey-improvements-plan.md  2026-03-18-unikey-improvements-report.md  2026-03-18-unikey-improvements-track-1.md  2026-03-18-unikey-improvements-track-2.md  2026-03-18-unikey-improvements-track-3.md
.hc/ui-audit/: 2026-03-19-ui-audit-plan.md  2026-03-19-ui-audit-report.md  2026-03-19-ui-audit-track-1.md  2026-03-19-ui-audit-track-2.md  2026-03-19-ui-audit-track-3.md  2026-03-19-ui-audit-track-4.md
build32/: CMakeCache.txt  CTestTestfile.cmake  ClipboardTests[1]_include.cmake  IPCTests[1]_include.cmake  SettingsUITests[1]_include.cmake  UniKeyTSF.slnx  UniKeyTests[1]_include.cmake  cmake_install.cmake
build64/: CMakeCache.txt  CTestTestfile.cmake  ClipboardTests[1]_include.cmake  ClipboardTests[1]_tests.cmake  IPCTests[1]_include.cmake  IPCTests[1]_tests.cmake  SettingsUITests[1]_include.cmake  SettingsUITests[1]_tests.cmake  UniKeyTSF.slnx  UniKeyTests[1]_include.cmake  UniKeyTests[1]_tests.cmake  cmake_install.cmake  cmake_test_discovery_07cd5f9f2e.json  cmake_test_discovery_3f4361151b.json  cmake_test_discovery_66691975a8.json  cmake_test_discovery_ba7be6ef50.json
build64/Release/: blacklist.txt
docs/: testing.md
docs/biz/: PRD.md  PRODUCT_BRIEF.md
docs/log/: EXECUTION_BACKLOG.md
docs/tech/: API_CONTRACTS.md  ARCHITECTURE.md  DEPLOYMENT.md  TEST_PLAN.md  diagram.mmd  tsf_evaluation.md
installer/: UniKeyTSF.nsi  installer.nsi
proposals/: 001-mutex-timeout-inconsistency-fix.md  002-shared-config-version-race-window.md  003-tsf-activate-error-handling.md  004-startup-settings-clarification.md  README.md
references/: codex-model-routing.md  migration-map.md  task-routing.md
roles/: architect.md  backend.md  biz.md  designer.md  devops.md  frontend.md  pm.md  qc.md
rules/: code-review.md  core-operating-model.md  delegation-and-subagents.md  delivery-and-verification.md  evidence-and-scope.md  frontend-quality.md
scripts/: sign.bat  validate-pack.ps1
skills/architecture-design/: SKILL.md
skills/backend-delivery/: SKILL.md
skills/code-review/: SKILL.md
skills/debugging-forensics/: SKILL.md
skills/delegation-subagents/: SKILL.md
skills/frontend-delivery/: SKILL.md
src/: UniKeyTSF.manifest  UniKeyTSF.rc  main.cpp  resource.h  shared_config.h
src/tsf/: guids.h  (+12 more)
templates/: code-review-report.md  feature-spec.md  implementation-plan.md  project-overview.md  system-map.md  task-brief.md  update-guide.md
tests/: characterization_harness.cpp  characterization_harness.h  characterization_test.cpp  clipboard_test.cpp  engine_test.cpp  ipc_test.cpp  routing_test.cpp  settings_message_contract_test.cpp  settings_ui_test.cpp  spellcheck_test.cpp  tsf_diagnostics_test.cpp
workflows/: code-review.md  debug-issue.md  delegate-implementation.md  delegate-research.md  implementation-review.md  plan-feature.md  product-docs.md  project-docs.md  subagent-integration-checklist.md
(+161 files in other folders)
